objects/NPS_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>TE IND NPS Settings to define Detractor Follow Up distribution</description>
    <fields>
        <fullName>A_C__c</fullName>
        <label>A&amp;C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IB__c</fullName>
        <label>IB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RAIL__c</fullName>
        <label>RAIL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOLAR__c</fullName>
        <label>SOLAR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_0__c</fullName>
        <label>Score 0</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_1_4__c</fullName>
        <label>Score 1-4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score_5_6__c</fullName>
        <label>Score 5-6</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NPS Settings</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Value__c</columns>
        <columns>Is_Active__c</columns>
        <columns>A_C__c</columns>
        <columns>IB__c</columns>
        <columns>RAIL__c</columns>
        <columns>SOLAR__c</columns>
        <columns>Score_0__c</columns>
        <columns>Score_1_4__c</columns>
        <columns>Score_5_6__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>